--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Tempat tanggal lahir : Bogor, 22 November 2003
 <font size="5" face="Serif" color="blue"> 
 Hai , nama saya Daffa' Mu'ayyad Fawwaz, biasa dipanggil dapa. Dan saya bersekolah di smakbo kelas 11. Saya suka bermain bersama teman teman dan memancing bersama. </font> 
 <br><div align="center"> 
-<img src=https://github.com/daffamuayyad64/daffamuayyad64.github.io/blob/master/daffamuayyad64.github.io.JPG width="300" height="500"> 
+<img src="daffamuayyad64.github.io.JPG" width="300" height="500"> 
 </div>
 </body> 
 </html> 
