--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head><title>Biodata Daffa</title><head>
+<head>
+  <title>Biodata Daffa</title><head>
+  <link rel="stylesheet" type="text/css" href="dapa.css">
 <body bgcolor="grey"> 
 <center> 
 <font color="lime" size="7"><b><u>Biodata</u></b></font><br> 
