--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="dapa.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <title>Biodata Daffa</title><head>
 <body bgcolor="grey"> 
 <center> 
@@ -19,7 +19,7 @@ Tempat tanggal lahir : Bogor, 22 November 2003
 <font size="5" face="Serif" color="blue"> 
 Hai , nama saya Daffa' Mu'ayyad Fawwaz, biasa dipanggil dapa. Dan saya bersekolah di smakbo kelas 11. Saya suka bermain bersama teman teman dan memancing bersama. </font> 
 <br><div align="center"> 
-<img src="daffamuayyad64.github.io.JPG" width="300" height="500"> 
+<img src="daffa.jpg" width="300" height="500"> 
 </div>
 </body> 
 </html> 
