--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2 align="left">Tentang Saya</h2>
 	<p> Hai , nama saya Daffa' Mu'ayyad Fawwaz, biasa dipanggil dapa. Dan saya bersekolah di smakbo kelas 11. Saya suka bermain bersama teman teman dan memancing bersama.</p>
 	<h3 align="center">FOTO</h3>
-	<img src="Daffa.jpg" width="400px" height="500px" style="display: block; margin: auto;">
+	<img src="daffa.jpg" width="400px" height="500px" style="display: block; margin: auto;">
 
 	<h4 align="center">Biodata singkat</h4>
 	<p>Nama					: Daffa Mu'ayyad Fawwaz</p>
